--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -2,7 +2,6 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    
     padding: 0 10%;
     /* justify-content: center; */
     /* background: linear-gradient(300deg, blue, black); */
@@ -32,3 +31,38 @@
     object-fit: cover
 }
 
+@media (max-width: 990px) {
+    .Home {
+        height: auto;
+    }
+    
+    .homeWreper {
+        flex-direction: column;
+        margin-top: 6rem;
+        justify-content: none;
+        margin-bottom: 100px;
+    }
+
+    .photoAndTitle {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .photoWreper img {
+        margin-top: 2rem;
+    }
+}
+
+@media (max-width: 525px) {
+    .photoWreper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .photoWreper img {
+        width: 100%;
+        height: auto;
+    }   
+}
