--- a/src/Components/Portfolio.css
+++ b/src/Components/Portfolio.css
@@ -1,14 +1,23 @@
 .Portfolio {
     width: 100%;
-    /* height: 100vh; */
+    height: auto;
     color: white;
+    /* padding: 0 10%; */
     /* border: 1px solid rgb(221, 0, 0);  */
     margin-bottom: 10vh;
+    /* border: 1px solid white; */
 }
 
 .Portfolio h1, h3 {
     text-align: center;
 }
+
+.PortfolioTitle {
+    
+    padding: 0 10%;
+}
+
+
 
 .Portfolio img {
     width: 100%;
@@ -88,6 +97,21 @@
         grid-template-columns: 1fr 1fr;
     }
 }
+
+@media(max-width: 990px) {
+    .Portfolio {
+        height: auto;
+        text-align: center;
+    }
+    .Portfolio h1:after {
+        content: '';
+        display: block;
+        position: relative;
+        width: 100%;
+        border: 2px solid #898989;
+    }
+}
+
 
 @media (max-width: 825px) {
     .PortfolioCont {
