--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -1,86 +1,71 @@
-.ExperienceCont {
-    margin: 0 10%;
-    color: white;
-    height: 120vh;
-}
-
-.ExperienceCont img {
-    width: 150px;
-    height: auto;
-    
-}
-
-.ExperienceCont span {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 85%;
-}
-
-
 .Experience {
+    width: 100%;
+    height: auto;
+    color: white;
+    margin-bottom: 10vh;
+}
+
+.Experience h1, h3 {
+    text-align: center;
+}
+
+.ExperienceTitle {
+    padding: 0 10%;
+}
+
+.Experience img {
+    width: 110px;
+    height: auto;
+}
+
+.ExperienceTitle {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.ExperienceCont {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 3%;
-    padding: 3% 0 10% 0;
+    padding: 5% 10% 10% 10%;
     height: auto;
 }
 
-.Experience div {
-    text-align: center;
-    background: linear-gradient(rgb(20, 32, 252), rgba(255, 0, 0, 0.391));
-    padding-top: 5%;
-    width: 100%;
-    border-radius: 1rem;
-    box-shadow: 0px 10px 20px 5px rgba(255, 0, 0, 0.5);
-}
-
 .ExperienceElem {
-    height: 250px;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 5%;
+    padding-bottom: 10%;
+    background: linear-gradient(rgb(20, 32, 252), rgba(255, 0, 0, 0.391));
+    height: 200px;
+    box-shadow: 0px 10px 20px 5px rgba(0, 0, 0, 0.5);
+    transition-duration: 400ms;
+    border-radius: 20px;
+    z-index: 0;
 }
-
-.ExperienceDescription h1:after {
-    content: '';
-    display: block;
-    position: relative;
-    width: 5em;
-    border: 2px solid #898989;
-}
-
-/* .Experience div img{
-    margin-bottom: 10%;
-} */
 
 
 
 
 @media (max-width: 1050px) {
     .Experience {
+        margin-bottom: 15vh;
+    }
+    .ExperienceCont {
         grid-template-columns: 1fr 1fr;
-    }
-    .ExperienceCont {
-        margin: 10% 10%;
-        color: white;
-    }
-}
-
-
-@media (max-width: 825px) {
-    .Experience {
-        grid-template-columns: 1fr;
-    }
-    .ExperienceCont {
-        color: white;
     }
 }
 
 @media(max-width: 990px) {
-    .ExperienceCont,.ExperienceWrep,.Experience {
-        height: 310vh;
+    .Experience {
+        height: auto;
         text-align: center;
     }
-    .ExperienceWrep h1:after {
+    .Experience h1:after {
         content: '';
         display: block;
         position: relative;
@@ -88,3 +73,17 @@
         border: 2px solid #898989;
     }
 }
+
+
+
+@media (max-width: 825px) {
+    .Experience {
+        margin-bottom: 30vh;
+    }
+
+    .ExperienceCont {
+        grid-template-columns: 1fr;
+    }
+    
+}
+
