SocialLinks is ready

--- a/src/Components/SocialLinks.css
+++ b/src/Components/SocialLinks.css
@@ -10,7 +10,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* border: 1px solid white; */
     padding-right: 16px;
     padding-left: 16px;
     width: 180px;
@@ -34,4 +33,104 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+}
+
+@media(max-width: 990px) {
+    .SocialLinks li {
+        margin-left: -180px;
+    }
+    .fab {
+        position: fixed;
+        right: 30px;
+        bottom: 38px;
+        border-radius: 50%;
+        /* height: 40px;
+        width: 40px; */
+        background-color: rgb(123, 123, 123);
+        z-index: 5;
+    }
+
+    button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: transparent;
+        border: 0;
+        cursor: pointer;
+        color: white;
+        padding: 14px;
+    }
+        /*  */
+    .fab > button {
+        position: relative;
+        display: grid;
+        place-items: center;
+        width: 64px;
+        height: 64px;
+        /* padding: 14px; */
+        border-radius: 50%;
+        border: 0;
+        background-color: rgb(123, 123, 123);
+        color: white;
+        transition: 0.2s;
+    }
+
+    .menu {
+        position: absolute;
+        bottom: 76px;
+        left: 0;
+        display: grid;
+        place-content: center;
+        gap: 12px;
+        width: 64px;
+        scale: 0;
+        translate: 0 80%;
+        transform-origin: 50% 50%;
+        opacity: 0;
+        visibility: hidden;
+        transition: 0.375s;
+    }
+
+    .fab.open > button {
+        rotate: 45deg;
+    }
+
+    .fab.open .menu {
+        scale: 1;
+        translate: 0;
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .menu > button  {
+        position: relative;
+        display: grid;
+        place-items: center;
+        /* width: 50px;
+        height: 50px; */
+        padding: 14px;
+        border-radius: 50%;
+        background-color: rgb(123, 123, 123);
+        color: white;
+        transition: 0.3s;
+    }
+
+    .menu > button:hover {
+        background-color: rgb(67, 65, 65);
+    }
+
+    /* .menu > button > span {
+        position: absolute;
+        right: 80px;
+        white-space: nowrap;
+        translate: 10px 0;
+        font-size: 16px;
+        transition: 0.5s;
+    }
+
+    .menu > button:hover > span {
+        translate: 0;
+        opacity: 1;
+        visibility: visible;
+    } */
 }
